Android Studio 1.0のベース